crates/strider/tests/snapshots/v2__ppc32be__floats__f64_compare.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "9" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="φ r9", shape=house, fillcolor="#163030"];
  "9" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "16" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "19" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "23" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "26" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "30" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "33" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "38" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "15" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "45" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "14" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "48" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "52" -> "50" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "47" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "53" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "55" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "55" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "57" -> "55" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "44" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "60" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "47" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "61" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "64" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "68" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "70" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "71" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "72" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "15" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "68" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "73" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "73" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "74" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "74" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "75" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "14" -> "75" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "66" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "78" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "80" -> "78" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "80" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "75" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "81" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "82" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "83" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "84" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "83" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "85" -> "83" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "85" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "72" -> "85" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "85" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "86" -> "81" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "87" -> "81" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "86" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "88" -> "86" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "88" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "75" -> "88" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "88" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
